--- a/index.html
+++ b/index.html
@@ -2,7 +2,16 @@
   
   Curiosidades do Futebol
 
-
+1 A primeira Copa foi na América do Sul
+2 Só um país disputou todas as Copas
+3 Manto da padroeira do Brasil
+4 O primeiro gol do Brasil em Copas
+5 O primeiro “7x1”
+6 Bola feita com bexiga de boi
+7 Roubaram a taça!
+8 Os números nas camisas
+9 Não existiam cartões até a Copa de 1970
+10 Primeiro clube de futebol do Brasil
 
 
 
